# AD_bin_heaps

./: .gitignore  CMakeLists.txt  README.md
include/: binheap.h  total_orders.h
src/: binheap.c  total_orders.c
tests/: array_functions.c  heap_functions.c  heap_functions.h  main.c  test_delete_min.c  test_insert.c  test_set.c  test_time.c  test_time.h
tests/common/: array_functions.h  heap_functions.c  heap_functions.h  test_set.h
